  Netty (Skye Wanderman-Milne via fpj)

  ZOOKEEPER-1632. fix memory leaks in cli_st (fpj via michim)

  ZOOKEEPER-1837. Fix JMXEnv checks (potential race conditions)
  (Germán Blanco via fpj)

  ZOOKEEPER-1858. JMX checks - potential race conditions while stopping
  and starting server (Rakesh R via fpj)

  ZOOKEEPER-1867. Bug in ZkDatabaseCorruptionTest (fpj)

  ZOOKEEPER-1811. The ZooKeeperSaslClient service name principal is
  hardcoded to "zookeeper" (Harsh J via phunt)

  ZOOKEEPER-1873. Unnecessarily InstanceNotFoundException is coming when
  unregister failed jmxbeans (Rakesh R via michim)

  ZOOKEEPER-2477: documentation should refer to Java cli shell and not
  C cli shell (Abraham Fine via phunt)

  Fix command handling in the C client shell (phunt via fpj)

  ZOOKEEPER-2579: ZooKeeper server should verify that dataDir and
  snapDir are writeable before starting (Abraham Fine via phunt)

  ZOOKEEPER-1576. Zookeeper cluster - failed to connect to cluster if one of the
  provided IPs causes java.net.UnknownHostException (Edward Ribeiro via camille)

  ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
  (phunt via cnauroth)

  ZOOKEEPER-1841. problem in QuorumTest (Germán via fpj)

IMPROVEMENTS:

  ZOOKEEPER-1583. Document maxClientCnxns in conf/zoo_sample.cfg
  (Christopher Tubbs via phunt)

  ZOOKEEPER-1627. Add org.apache.zookeeper.common to exported packages
  in OSGi MANIFEST (Arnoud Glimmerveen via phunt)

  ZOOKEEPER-1584. Adding mvn-install target for deploying the
  zookeeper artifacts to .m2 repository (Ashish Singh via phunt)

  ZOOKEEPER-2402: Document client side properties (Arshad Mohammad via fpj)

  ZOOKEEPER-1430. add maven deploy support to the build
  (Giridharan Kesavan via phunt)

Release 3.4.5 - 2012-09-30

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1376. zkServer.sh does not correctly check for
  $SERVER_JVMFLAGS (Skye W-M via henryr)
