@@ -147,6 +147,9 @@ IMPROVEMENTS:
   and starting server (Rakesh R via fpj)
 
   ZOOKEEPER-1867. Bug in ZkDatabaseCorruptionTest (fpj)
+ 
+  ZOOKEEPER-1872. QuorumPeer is not shutdown in few cases
+  (Rakesh R via fpj)
 
   ZOOKEEPER-1811. The ZooKeeperSaslClient service name principal is
   hardcoded to "zookeeper" (Harsh J via phunt)
